src/objects/Patient_Custom__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Group__c</fullName>
        <label>Age Group</label>
        <picklist>
            <picklistValues>
                <fullName>under 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>over 90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age_Snomed__c</fullName>
        <label>Age Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY()- Birthdate__c )/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Birth__c</fullName>
        <label>Country of Birth</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ethnicity_Snomed__c</fullName>
        <label>Ethnicity Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Hispanic or Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Hispanic or Latino</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnicity_value_Snomed__c</fullName>
        <label>Ethnicity value Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <formula>TRIM(LEFT( First_Name__c , 1) ) &amp; &apos;&apos; &amp;  TRIM( LEFT( Middle_Name__c , 1) ) &amp; &apos;&apos; &amp;  TRIM( LEFT( Last_Name__c , 1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institute_Text__c</fullName>
        <label>Institute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsTestHarnessPatient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTestHarnessPatient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Record_Number__c</fullName>
        <label>Medical Record Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Surgeon__c</fullName>
        <label>Other Surgeon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_primary_MD__c</fullName>
        <label>Other primary MD</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phase Master</label>
        <referenceTo>Phase_Master__c</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_MD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you don&apos;t find Surgeon in lookup list then click on &quot;New&quot; button in lookup.</inlineHelpText>
        <label>Primary MD</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Race_African_American_Snomed__c</fullName>
        <label>Race African American Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Asian_Snomed__c</fullName>
        <label>Race Asian Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Snomed__c</fullName>
        <label>Race Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian or Alaska Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian or Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Failure_Number__c</fullName>
        <label>Screen Failure Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signed_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Screening Consent Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligibility Check Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligibility Check Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Study_Registration_Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Study Registration Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surgeon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you don&apos;t find Surgeon in lookup list then click on &quot;New&quot; button in lookup.</inlineHelpText>
        <label>Surgeon</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Patients (Surgeon)</relationshipLabel>
        <relationshipName>Patients1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestHarnessId__c</fullName>
        <externalId>true</externalId>
        <label>TestHarnessId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsigned_Patient_First_Name__c</fullName>
        <label>Unsigned Patient First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsigned_Patient_Last_Name__c</fullName>
        <label>Unsigned Patient Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <label>VIP</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Family Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Dignitary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Dignitary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Family Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Important Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPortalEnable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPortalEnable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUserDeActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUserDeActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUserStatus__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>isUserStatus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mrn__c</fullName>
        <label>mrn</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_patient_id__c</fullName>
        <label>pg_patient_id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Institute_Text__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Institution_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK ( Institution__c )</errorConditionFormula>
        <errorDisplayField>Institution__c</errorDisplayField>
        <errorMessage>Please Enter Institution.</errorMessage>
    </validationRules>
</CustomObject>